bugfix: DEC-267: bio field overflow

--- a/projects/charon/src/app/hub/components/hub-profile-card/hub-profile-card.component.scss
+++ b/projects/charon/src/app/hub/components/hub-profile-card/hub-profile-card.component.scss
@@ -26,6 +26,7 @@
 .hub-profile-card__bio {
   color: $color-grey;
   text-align: center;
+  word-break: break-word;
 }
 
 .hub-profile-card__posts-count {
